--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #html,
 body {
   font-size: 12px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 #image-overlay {
   background-color: rgba(64, 93, 102, 0.651);
@@ -21,8 +22,17 @@ body {
 #navigationbar {
   display: flex;
   justify-content: space-between;
+  width: 100vw;
+  transition: background-color 0.4s ease-in-out;
 }
-
+header {
+  position: fixed;
+  z-index: 3;
+}
+nav.scrolled {
+  background-color: rgb(71, 97, 112);
+  opacity: 0.98;
+}
 * {
   box-sizing: border-box;
   padding: 0px;
@@ -67,6 +77,11 @@ a {
   text-decoration: none;
   color: whitesmoke;
   cursor: pointer;
+  transition: color 0.4s ease-in-out;
+  z-index: 4;
+}
+#nav.scrolled link a {
+  color: rgb(69, 153, 202);
 }
 a:hover {
   color: rgb(92, 152, 187);
@@ -90,14 +105,14 @@ a:hover {
 }
 #makeappointment:hover {
   margin-left: 30px;
-  background-color: rgb(66, 113, 139);
+  background-color: rgb(41, 146, 207);
   margin-top: 0px;
-  color: rgb(96, 139, 189);
+  color: white;
 }
 .makeappointment-below:hover {
-  background-color: rgb(66, 113, 139);
+  background-color: rgb(41, 146, 207);
   margin-top: 0px;
-  color: rgb(96, 139, 189);
+  color: white;
 }
 .makeappointment-below {
   background-color: rgb(69, 153, 202);
@@ -122,6 +137,7 @@ a:hover {
   font-size: 50px;
   color: whitesmoke;
   width: 500px;
+  text-align: left;
 }
 #secondsentence {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -129,11 +145,13 @@ a:hover {
   font-size: 50px;
   color: rgb(37, 153, 219);
   width: 500px;
+  text-align: left;
 }
 #text {
   display: inline-block;
-  margin-top: 3%;
+  margin-top: 10%;
   margin-left: 10%;
+  text-align: left;
 }
 #sanatiotext {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -172,6 +190,7 @@ a:hover {
 }
 #servicesection {
   background-color: rgb(255, 255, 255);
+  z-index: -2;
 }
 #servicesection .top h1 {
   text-align: center;
@@ -191,20 +210,21 @@ section#servicesection .row {
   padding: 50px;
 }
 section#servicesection .row .card {
-  width: 600px;
-  height: 400px;
+  width: 200px;
+  height: 200px;
   position: relative;
   display: block;
   margin: auto;
   align-items: center;
-  gap: 24px;
+  gap: 10px;
 }
 
 section#servicesection .row .card img {
-  width: 250px;
+  width: 100px;
   display: block;
   margin: auto;
-  padding-bottom: 70px;
+  padding-bottom: 20px;
+  z-index: -4;
 }
 section#servicesection .row .card h3 {
   font-size: 24px;
@@ -218,13 +238,14 @@ section#servicesection .top img {
   margin: auto;
 }
 section#servicesection .top {
-  padding: 100px;
+  padding: 20px;
 }
 section#aboutsection h2 {
   text-align: center;
   font-size: 40px;
   padding: 30px;
   color: white;
+  font-weight: 1;
 }
 
 section#aboutsection img {
@@ -234,17 +255,20 @@ section#aboutsection img {
   margin: auto;
 }
 section#aboutsection #background {
-  background-color: rgba(154, 152, 170, 0.5);
+  background-color: rgba(64, 93, 102, 0.651);
   height: 100vh;
   padding: 30px;
   position: relative;
 }
 section#aboutsection p {
   font-size: 30px;
-  text-align: justify;
   line-height: 2;
   color: white;
   padding: 50px;
+  font-weight: 1;
+  width: 1000px;
+  display: block;
+  margin: auto;
 }
 section#aboutsection {
   background-image: url("aboutbg.jpg");
@@ -252,6 +276,7 @@ section#aboutsection {
   position: relative;
   padding: 0;
   margin: 0;
+  z-index: -1;
 }
 #makeappointment-below-about {
   background-color: rgb(69, 153, 202);
@@ -259,9 +284,13 @@ section#aboutsection {
   cursor: pointer;
   padding: 15px;
   border-radius: 5px;
-  width: 200px;
+  width: 175px;
   display: block;
   margin: auto;
+}
+#makeappointment-below-about:hover {
+  background-color: rgb(41, 146, 207);
+  color: white;
 }
 #image-overlay-makeappointment {
   background-color: rgba(64, 93, 102, 0.651);
@@ -380,7 +409,7 @@ footer {
   height: 70vh;
   position: relative;
   display: block;
-  background-color: rgb(236, 233, 233);
+  background-color: rgb(248, 240, 240);
 }
 #footer-top {
   display: flex;
@@ -438,7 +467,7 @@ footer {
 #copyright {
   position: absolute;
   bottom: 0;
-  background-color: rgb(192, 188, 188);
+  background-color: rgb(236, 231, 231);
   width: 100vw;
   height: 60px;
   display: flex;
@@ -449,4 +478,58 @@ footer {
   font-size: 15px;
   border-right: 2px solid black;
   width: 200px;
+}
+#welcomesection {
+  height: 100vh;
+  width: 100vw;
+  display: block;
+  margin: auto;
+  align-items: center;
+  background-color: rgb(241, 236, 236);
+}
+#welcomesection-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#welcomeintro h2,
+p {
+  text-align: center;
+}
+#welcomeintro {
+  width: 800px;
+  margin: auto;
+}
+#welcomeintro h2 {
+  font-size: 50px;
+  padding: 40px;
+  font-weight: 1;
+}
+#welcomeintro p {
+  font-size: 24px;
+  line-height: 2;
+  padding-bottom: 60px;
+}
+.welcomesection-card h2 {
+  color: rgb(37, 153, 219);
+  font-size: 40px;
+  font-weight: 1;
+  text-align: center;
+  padding: 10px;
+}
+.welcomesection-card img {
+  width: 100px;
+  display: block;
+  margin: auto;
+}
+.welcomesection-card {
+  display: block;
+  margin: auto;
+}
+.welcomesection-card p {
+  width: 350px;
+  display: block;
+  margin: auto;
+  font-size: 20px;
 }
