--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ section#servicesection .row .card img {
 section#servicesection .row .card h3 {
   font-size: 24px;
   text-align: center;
+  color: rgb(37, 153, 219);
 }
 
 section#servicesection .top img {
