--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
   justify-content: space-between;
   width: 100vw;
   transition: background-color 0.4s ease-in-out;
+  height: 80px;
+  position: relative;
 }
 header {
   position: fixed;
@@ -64,13 +66,13 @@ img {
 }
 
 #link {
-  display: inline-flex;
+  display: flex;
   color: whitesmoke;
   font-size: 1rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-right: 7%;
-  padding-top: 3%;
+  align-items: center;
   cursor: pointer;
 }
 a {
@@ -207,7 +209,6 @@ section#servicesection .row {
   position: relative;
   justify-content: center;
   align-items: center;
-  gap: 24px;
   padding: 50px;
 }
 section#servicesection .row .card {
@@ -217,7 +218,6 @@ section#servicesection .row .card {
   display: block;
   margin: auto;
   align-items: center;
-  gap: 10px;
 }
 
 section#servicesection .row .card img {
